--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
   <body>
     <header class="page-header">
       <div class="container">
-      E-Mail: ruslanfedorov2208@gmail.com
-      tle. :+38 097 705 13 35
+        E-Mail: <a href="mailto:ruslanfedorov2208@gmail.com" class="header-email">ruslanfedorov2208@gmail.com</a>
+      <a href="tel:+380977051335" class="header-phone">tel. :+38 097 705 13 35</a>
       Telegram: @Fed_R
   </div>
     </header>
@@ -26,6 +26,9 @@
 
 
     <section class="intro">
+      <figure class="user-image">
+        <img src="img/myphoto.jpeg" width="928" height="536">
+      </figure>
       <div class="container">
       <p>
       I am very close and interested in the IT field, so I am currently studying at
@@ -44,7 +47,9 @@
     <section class="portfolio">
       <div class="container">
       <h2 class="subheading">Мои работы</h2>
+      <figure>
 
+      </figure>
       <h3>Магазин товаров для дома</h3>
       <p>Мой первый сайт.</p>
 
@@ -55,9 +60,9 @@
 
     <footer class="page-footer">
       <div class="container">
-      E-Mail: ruslanfedorov2208@gmail.com
-      tle. :+38 097 705 13 35
-      Telegram: @Fed_R
+        E-Mail: <a href="mailto:ruslanfedorov2208@gmail.com" class="footer-email">ruslanfedorov2208@gmail.com</a>
+        <a href="tel:+380977051335" class="footer-phone">tel. :+38 097 705 13 35</a>
+        Telegram: @Fed_R
       </div>
     </footer>
 
